--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 			<version>2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>20.0</version>
+		</dependency>
+
 	</dependencies>
        
 <profiles>  
